force-app/main/default/objects/Custom_Benefit__c/Custom_Benefit__c.object-meta.xml
<CustomObject>
    <label>Custom Benefit</label>
    <nameField>
        <label>Custom Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>