force-app/main/default/objects/Custom_Benefit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Benefits</relationshipLabel>
    <relationshipName>Custom_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>